deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: core-server
    app.kubernetes.io/version: v0.1.0
  name: core-server-gateway
  namespace: core-storage-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
      app.kubernetes.io/part-of: core-server
      app.kubernetes.io/version: v0.1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
        app.kubernetes.io/part-of: core-server
        app.kubernetes.io/version: v0.1.0
    spec:
      containers:
        - image: harbor.computational.bio.uni-giessen.de/scienceobjectsdb/core-api-gateway:latest
          imagePullPolicy: Always
          name: gatewayhandler
          ports:
          - containerPort: 9000
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
      imagePullSecrets:
        - name: harbor
